tests/dbg_cases/errors/uninitialized_var/test.csm
// Test dbg() with uninitialized variable
i32 main() {
    i32 x;
    dbg(x);
    return 0;
}
